[package]
name = "titty-sprinkles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
env_logger = "0.9.0"
future-utils = "0.12.1"
futures = "0.3.24"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
tokio-tungstenite = "0.17.2"
url = "2.2.2"
urlencoding = "2.1.2"
